# little-CMS-cmake

./: .gitignore  CMakeLists.txt  deps.json
src/: lcms2.def
